--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         }
         
         .main-image {
-            /* Image 1: Neutral Simple Landing Pages Tips Instagram Carousel Post.jpg (ABBY UNCHEK logo di atas tekstur semen) */
+            /* Image 1: AL Simple Landing Pages Tips Instagram Carousel Post - 3.jpg (ABBY UNCHEK logo di atas tekstur semen) */
             width: 100%;
             height: auto;
             display: block;
