--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             height: auto;
             display: block;
             /* Gaya tambahan agar logo terlihat pas di tengah */
-            background-image: url('Neutral Simple Landing Pages Tips Instagram Carousel Post.jpg');
+            background-image: url('AL Simple Landing Pages Tips Instagram Carousel Post - 3.jpg');
             background-size: cover;
             background-position: center;
             /* Untuk memastikan kotak gambar mengambil ukuran yang tepat */
